--- a/ui/shell/select_roster/beam_roster.less
+++ b/ui/shell/select_roster/beam_roster.less
@@ -1,9 +1,35 @@
 #selectRoster {
+   #cheatMode {
+      position: absolute;
+      top: 115px;
+      left: 845px;
+
+      input[type=checkbox] {
+         display: inline-block;
+      }
+      label {
+         .controlFont;
+         font-size: 16px;
+      }
+   }
+   .statsTotal {
+      .controlFont;
+      position: absolute;
+      color: palevioletred;
+      bottom: 38px;
+      left: 210px;
+
+      * {
+         display: inline-block;
+         font-size: 18px; 
+         margin-right: 5px;
+      }
+   }
    #citizens {
       .roster {
          .rosterEntry {
             .stats {
-               width: 250px;
+               width: 300px;
 
                .statsImage {
                   background: url(./images/stats_bg.png) no-repeat;
@@ -15,27 +41,27 @@
                #mind {
                   position: absolute;
                   width: 57px;
+                  height: 57px;
                   top: 0px;
                   left: -3px;
-                  padding-top: 20px;
                   text-align: right;
                   color: #4bf600;
                }
                #body {
                   position: absolute;
                   width: 57px;
+                  height: 57px;
                   top: 0px;
                   left: 95px;
-                  padding-top: 20px;
                   text-align: right;
                   color: #ff405b
                }
                #spirit {
                   position: absolute;
                   width: 57px;
+                  height: 57px;
                   top: 0px;
                   left: 195px;
-                  padding-top: 20px;
                   text-align: right;
                   color: #00b9f6;
                }
