add in remove traits feature cleaned up ui

--- a/ui/shell/select_roster/beam_roster.less
+++ b/ui/shell/select_roster/beam_roster.less
@@ -25,6 +25,23 @@
          margin-right: 5px;
       }
    }
+   #traitDescriptions {
+      .traitDescription {
+         margin: 26px 24px 0px 10px;
+         .removeIcon {
+            background: url(./images/trash_button.png) no-repeat;
+            background-size: contain;
+            background-repeat: no-repeat;
+            width: 24px;
+            height: 24px;
+            display: inline-block;
+            margin-bottom: 6px;
+         }
+         .description {
+            margin-left: 28px;
+         }
+      }
+   }
    #citizens {
       .roster {
          .rosterEntry {
@@ -147,7 +164,6 @@
         #traits {
             position: inline-block;
             .traitDescription {
-
                .description {
                   color: white;
                }
